@@ -17,6 +17,7 @@
 package org.unigrid.janus.model;
 
 import jakarta.enterprise.context.ApplicationScoped;
+import jakarta.ws.rs.client.Client;
 import java.beans.PropertyChangeListener;
 import java.beans.PropertyChangeSupport;
 import java.io.IOException;
@@ -40,36 +41,37 @@ import org.unigrid.janus.model.service.DebugService;
 import org.update4j.Configuration;
 import org.update4j.OS;
 
-import jakarta.inject.Inject;
 import jakarta.ws.rs.client.ClientBuilder;
-import jakarta.ws.rs.client.WebTarget;
-import java.io.BufferedInputStream;
+import jakarta.ws.rs.core.MediaType;
+import jakarta.ws.rs.core.Response;
+
+import java.io.BufferedReader;
 import java.io.File;
-import java.io.FileOutputStream;
 import java.util.Objects;
 import java.util.Properties;
 import javafx.application.Platform;
 import org.apache.commons.io.FileUtils;
 import org.unigrid.janus.Janus;
-import org.unigrid.janus.model.entity.GithubJson;
-import org.unigrid.janus.model.entity.GithubJson.Asset;
+import org.unigrid.janus.model.entity.Feed;
 
 @Eager
 @ApplicationScoped
 public class UpdateWallet extends TimerTask {
 
-	final private String LINUX_PATH = System.getProperty("user.home").concat("/.unigrid/dependencies/temp/");
-	final private String MAC_PATH = System.getProperty("user.home")
-		.concat("/Library/Application Support/UNIGRID/dependencies/temp/");
-	final private String WINDOWS_PATH = System.getProperty("user.home")
-		.concat("/AppData/Roaming/UNIGRID/dependencies/temp/");
+	private final String linuxPath = System.getProperty("user.home").concat("/.unigrid/dependencies/temp/");
+	private final String macPath = System.getProperty("user.home")
+			.concat("/Library/Application\\ Support/UNIGRID/dependencies/temp/");
+	private final String windowsPath = System.getProperty("user.home")
+			.concat("/AppData/Roaming/UNIGRID/dependencies/temp/");
 
 	private static DebugService debug = new DebugService();
 	private static final String BASE_URL = "https://raw.githubusercontent.com/unigrid-project/unigrid-update/main/%s";
-	//private static PollingService polling = new PollingService();
+	// private static PollingService polling = new PollingService();
 	private OS os = OS.CURRENT;
-	private static final Map<?, ?> OS_CONFIG = ArrayUtils.toMap(new Object[][]{
-		{OS.LINUX, "config-linux.xml"}, {OS.WINDOWS, "config-windows.xml"}, {OS.MAC, "config-mac.xml"}
+	private static final Map<?, ?> OS_CONFIG = ArrayUtils.toMap(new Object[][] {
+		{OS.LINUX, "config-linux.xml"},
+		{OS.WINDOWS, "config-windows.xml"},
+		{OS.MAC, "config-mac.xml"}
 	});
 
 	public enum UpdateState {
@@ -86,8 +88,8 @@ public class UpdateWallet extends TimerTask {
 	private Configuration updateConfig = null;
 	private SimpleBooleanProperty running;
 	private static PropertyChangeSupport pcs;
-	private WebTarget target;
-	private GithubJson githubJson;
+	private Client client;
+	private Feed githubJson;
 
 	public UpdateWallet() {
 		System.out.println("Init walletUpdate");
@@ -101,9 +103,20 @@ public class UpdateWallet extends TimerTask {
 		this.pcs = new PropertyChangeSupport(this);
 	}
 
-	private void initWebTarget() {
-		target = ClientBuilder.newBuilder()
-			.build().target("https://api.github.com/repos/unigrid-project/janus-java/releases/latest");
+	private Feed initWebTarget() {
+		try {
+			client = ClientBuilder.newBuilder()
+					.build();
+			Response response = client.target("https://github.com/unigrid-project/janus-java/releases.atom")
+					.request(MediaType.APPLICATION_XML_TYPE).get();
+			// System.out.println(response.readEntity(String.class));
+			Feed feed = response.readEntity(Feed.class);
+			return feed;
+		} catch (Exception e) {
+			System.out.println(e.getMessage());
+			System.out.println(e.getCause().toString());
+			return null;
+		}
 	}
 
 	public void addPropertyChangeListener(PropertyChangeListener listener) {
@@ -127,18 +140,22 @@ public class UpdateWallet extends TimerTask {
 				public void run() {
 					if (SystemUtils.IS_OS_MAC_OSX) {
 						Notifications.create().title("Update Ready")
-							.text("New update ready \nPleas close application to update!")
-							.position(Pos.TOP_RIGHT).showInformation();
+								.text("New update ready \nPleas"
+									+ " close application to update!")
+								.position(Pos.TOP_RIGHT).showInformation();
 					} else {
 						Notifications.create().title("Update Ready")
-							.text("New update ready \nPleas close application to update!").showInformation();
+								.text("New update ready \nPleas"
+									+ " close application to update!")
+								.showInformation();
 					}
 				}
 			});
 
 		} else {
 			this.pcs.firePropertyChange(this.UPDATE_PROPERTY, oldValue, UpdateState.UPDATE_READY);
-			//debug.print("user.dir: " + System.getProperty("user.dir"), UpdateWallet.class.getSimpleName());
+			// debug.print("user.dir: " + System.getProperty("user.dir"),
+			// UpdateWallet.class.getSimpleName());
 		}
 
 	}
@@ -177,18 +194,6 @@ public class UpdateWallet extends TimerTask {
 
 	private Boolean checkUpdateBootstrap() {
 		String delimiter = ".";
-		githubJson = target.request().get()
-			.readEntity(GithubJson.class);
-
-		String githubTag = githubJson.getTagName();
-
-		System.out.println("Github tag for this version: " + githubTag);
-		for (Asset a : githubJson.getAssets()) {
-			System.out.println(a.getBrowserDownloadUrl());
-		}
-
-		String[] s = githubTag.substring(1).split(delimiter);
-		System.out.println(githubTag.substring(1));
 		Properties myProperties = new Properties();
 
 		try {
@@ -203,39 +208,31 @@ public class UpdateWallet extends TimerTask {
 
 		System.out.println(filteredVer);
 		String[] existingVersion = filteredVer.split(delimiter);
-		System.out.println(s.length);
 		System.out.println(existingVersion.length);
-		/*TODO: find out way the split dose not work as inteded. Its wierd!!!
-		if (!s[0].equals(existingVersion[0]) || !s[1].equals(existingVersion[1])) {
-			b = true;
-			bootstrapUpdate = true;
-		} else {
-			b = false;
-			bootstrapUpdate = false;
-		}*/
-		if (githubTag.substring(1).equals(filteredVer)) {
+		String[] latestVersion = getLatestVersion().split(delimiter);
+
+		// if (latestVersion[0].equals(existingVersion[0]) ||
+		// latestVersion[1].equals(existingVersion[1])) {
+		if (getLatestVersion().equals(filteredVer)) {
 			bootstrapUpdate = false;
 		} else {
 			if (OS.CURRENT == OS.LINUX
-				&& !checkTempFolder(githubJson.getAssets().get(3).getName(), LINUX_PATH)) {
+					&& !checkTempFolder(getDEBFileName(getLatestVersion()), linuxPath)) {
 				System.out.println("downloading linux installer");
-				downloadFile(githubJson.getAssets().get(3)
-					.getBrowserDownloadUrl(),
-					LINUX_PATH,
-					githubJson.getAssets().get(3).getName());
+				downloadFile(getDownloadURL(getLatestVersion(), getDEBFileName(getLatestVersion())),
+						linuxPath,
+						getDEBFileName(getLatestVersion()));
 				System.out.println("Did it start??");
 			} else if (OS.CURRENT == OS.MAC
-				&& !checkTempFolder(githubJson.getAssets().get(0).getName(), MAC_PATH)) {
-				downloadFile(githubJson.getAssets().get(0)
-					.getBrowserDownloadUrl(),
-					MAC_PATH,
-					githubJson.getAssets().get(0).getName());
+					&& !checkTempFolder(getDMGFileName(getLatestVersion()), macPath)) {
+				downloadFile(getDownloadURL(getLatestVersion(), getDMGFileName(getLatestVersion())),
+						macPath,
+						getDMGFileName(getLatestVersion()));
 			} else if (OS.CURRENT == OS.WINDOWS
-				&& !checkTempFolder(githubJson.getAssets().get(1).getName(), WINDOWS_PATH)) {
-				downloadFile(githubJson.getAssets().get(1)
-					.getBrowserDownloadUrl(),
-					WINDOWS_PATH,
-					githubJson.getAssets().get(1).getName());
+					&& !checkTempFolder(getMSIFileName(getLatestVersion()), windowsPath)) {
+				downloadFile(getDownloadURL(getLatestVersion(), getMSIFileName(getLatestVersion())),
+						windowsPath,
+						getMSIFileName(getLatestVersion()));
 			}
 			bootstrapUpdate = true;
 		}
@@ -258,34 +255,76 @@ public class UpdateWallet extends TimerTask {
 	}
 
 	public void doUpdate() {
+		final Object obj = new Object();
 		System.out.println(bootstrapUpdate);
 		Thread t = new Thread(new Runnable() {
 			@Override
 			public void run() {
 				if (checkUpdateBootstrap()) {
-					String linuxInstallExec = "pkexcec dpkg -i " + LINUX_PATH
-						+ githubJson.getAssets().get(3).getName();
-					String macInstallExec = "hdiutil attach " + MAC_PATH + githubJson.getAssets()
-						.get(0).getName();
-					String windowsInstallExec ="msiexec /i" + WINDOWS_PATH + githubJson.getAssets()
-						.get(1).getName();
+					Process process;
+					String linuxInstallExec = String.format("pkexec dpkg -i %s%s", linuxPath,
+							getDEBFileName(getLatestVersion()));
+					String windowsInstallExec = String.format("msiexec /i %s%s",
+							windowsPath.replace("/", "\\"), getMSIFileName(getLatestVersion()));
 					System.out.println(linuxInstallExec);
+					String macInstallExec = macPath + getDMGFileName(getLatestVersion());
 					try {
 						if (OS.CURRENT == OS.LINUX) {
+							Process t = Runtime.getRuntime().exec("cat /etc/os-release");
+							t.waitFor();
+							BufferedReader stdInput = new BufferedReader(
+									new InputStreamReader(t.getInputStream()));
+
+							BufferedReader stdError = new BufferedReader(
+									new InputStreamReader(t.getErrorStream()));
+
+							// Read the output from the command
+							System.out.println("Here is the standard output of the command:\n");
+							String s = null;
+							while ((s = stdInput.readLine()) != null) {
+								// System.out.println(s);
+								if (getFirstKeywordMatch(s, "ID_LIKE") != null) {
+									System.out.println(getFirstKeywordMatch(s,
+										"ID_LIKE"));
+								}
+							}
+
+							// Read any errors from the attempted command
+							System.out.println("Here is the standard error of the"
+								+ " command (if any):\n");
+							while ((s = stdError.readLine()) != null) {
+								System.out.println(s);
+							}
 							System.out.println("downloading linux installer");
-							downloadFile(githubJson.getAssets().get(3)
-								.getBrowserDownloadUrl(),
-								LINUX_PATH,
-								githubJson.getAssets().get(3).getName());
-							Runtime.getRuntime().exec(linuxInstallExec);
+							try {
+								Process p = Runtime.getRuntime().exec(linuxInstallExec);
+								p.waitFor();
+
+								// process = new ProcessBuilder(linuxInstallExec).start();
+								// process.waitFor();
+							} catch (Exception e) {
+								System.out.println(e.getMessage());
+							}
+							// Runtime.getRuntime().exec(linuxInstallExec);
 							System.out.println("Did it start??");
 						} else if (OS.CURRENT == OS.MAC) {
-							downloadFile(githubJson.getAssets().get(0)
-								.getBrowserDownloadUrl(),
-								LINUX_PATH,
-								githubJson.getAssets().get(0).getName());
-							Runtime.getRuntime().exec(macInstallExec);
+							try {
+								Process p = Runtime.getRuntime().exec(new String[] {"open",
+									macInstallExec});
+								int exitCode = p.waitFor();
+								System.out.println("exitCode " + exitCode);
+							} catch (Exception e) {
+								// TODO: handle exception
+								System.out.println("cant open dmg: " + e.getMessage());
+							}
 						} else if (OS.CURRENT == OS.WINDOWS) {
+							try {
+								System.out.println(windowsInstallExec);
+								Process p = Runtime.getRuntime().exec(windowsInstallExec);
+								p.waitFor();
+							} catch (Exception e) {
+								System.out.println(e.getMessage());
+							}
 						}
 					} catch (Exception e) {
 						System.out.println(e.getMessage());
@@ -293,8 +332,12 @@ public class UpdateWallet extends TimerTask {
 				}
 				String linuxExec = "/opt/unigrid/bin/Unigrid";
 				String macExec = "open -a unigrid";
-				String windowsExec = "c:/programFiles/unigrid/bin/unigrid.exe";
+				String windowsExec = "\"C:\\Program Files\\Unigrid\\Unigrid.exe\"";
 				try {
+					synchronized (obj) {
+						obj.notifyAll();
+					}
+					System.out.println("!!!!We got passed the notyfiy");
 					if (OS.CURRENT == OS.LINUX) {
 						System.out.println("run the app agien on linux");
 						Runtime.getRuntime().exec(linuxExec);
@@ -310,7 +353,28 @@ public class UpdateWallet extends TimerTask {
 			}
 		});
 		t.start();
+		synchronized (obj) {
+			try {
+				System.out.println("We are waiting!!!!!!!");
+				obj.wait();
+				System.out.println("we are done waiting!!!!!!");
+			} catch (InterruptedException e) {
+				System.out.println(e.getMessage());
+			}
+		}
 		System.exit(0);
+	}
+
+	private static String getFirstKeywordMatch(String s, String keyword) {
+		String[] parts = s.split("=");
+
+		for (String part : parts) {
+			if (part.contains(keyword)) {
+				return s.split("=")[1];
+			}
+		}
+
+		return null;
 	}
 
 	private void downloadFile(String url, String path, String fileName) {
@@ -319,5 +383,38 @@ public class UpdateWallet extends TimerTask {
 		} catch (Exception e) {
 			System.out.println(e.getMessage());
 		}
+	}
+
+	private String getDEBFileName(String version) {
+		return String.format("unigrid_%s_amd64.deb", version);
+	}
+
+	private String getDMGFileName(String version) {
+		return String.format("Unigrid-%s.dmg", version);
+	}
+
+	private String getMSIFileName(String version) {
+		return String.format("Unigrid-%s.msi", version);
+	}
+
+	private String getRPMFileName(String version) {
+		return String.format("unigrid-%s.x86_64.rpm", version);
+	}
+
+	private String getLatestVersion() {
+		githubJson = initWebTarget();
+		if (githubJson == null) {
+			System.out.println("githubjson is null");
+			return "";
+		}
+		String githubEntry = githubJson.getEntry().get(0).getId();
+		githubEntry = githubEntry.split("/")[2].substring(1);
+		System.out.println("Github tag for this version: " + githubEntry);
+		return githubEntry;
+	}
+
+	private String getDownloadURL(String version, String fileName) {
+		return String.format("https://github.com/unigrid-project/janus-java/releases/download/v%s/%s",
+				version, fileName);
 	}
 }
